--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@
 
 .row-content{
     margin:0 auto;
-    padding: 50px 0px 0px 50px;
-    border-bottom: 1px solid black;
+    padding: 50px 0px 50px 0px;
+    border-bottom: 1px ridge;
     min-height: 400px;
 }
 .footer{
@@ -24,4 +24,11 @@
     font-size:80%;
     margin:0;
     color:#0f0f0f;
+}
+body{
+    padding: 50px 0px 0px 0px ;
+    z-index: 0;
+}
+.navbar-dark{
+    background-color: #512da8;
 }
