--- a/css/styles.scss
+++ b/css/styles.scss
@@ -73,3 +73,15 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+.modal{
+    .modal-header{
+        background:$background-dark ;
+        color: floralwhite;
+        button{
+            color:floralwhite;
+        }
+    }
+    .modal-body{
+        background-color: $background-pale;
+    }
+}
